--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </tr>
 
     </table>
-    <a href="/lab2/table.html">
+    <a href="/lab2/table.html">LAB 2 TIME TABLE</a>
 </body>
 <td>DSA <br>710 <br>PMP </td>
 </html>
