--- a/index.html
+++ b/index.html
@@ -4,39 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Table</title>
+    <title>Resume</title>
+    <link rel="stylesheet" href="#">
 </head>
-<body>
+<body bgcolor="lightyellow" >
+    <h1>CURRICULUM VITAE</h1><hr style="border: 2px solid rgb(22, 3, 3);">
+    <h2> VIRAJ PATOLIYA</h2>
+    <img border="2" height="165px" width="150px" src="viraj.jpg" alt="please refresh onces" >
+    <p> <li>contact: 9714597273</li><li>virajpatoliya44@gmail.com</li></p>
+    <h3><B>OBJECTIVE <hr></B></h3>
+    <p>To become a successful expert in the field of Information Technology by channelizing my technical knowledge and skills to ensure personal and professional growth and to contribute to the prosperity of the organization.</p>
+    <h3><B>QUALIFICATION <hr></B></h3>
+   
     <table border="2">
         <tr>
-            <th>HRS</th>
-            <th>MON</th>
-            <th>TUE</th>
-            <th>WED</th>
-            <th>THU</th>
-            <th>FRI</th>
-            <th>SAT</th>
-        </tr>
-
-        <tr>
-            <th>9:10 <br>to <br>10:10</th>
-            <td>DSA <br>710 <br>PMP </td>
-            <td>COM <br>710 <br>PDS </td>
-            <td>COM <br>710 <br>PDS </td> 
-            <td>COM <br>710 <br>PDS </td> 
-            <td>COM <br>710 <br>PDS </td>
+          <th>University</th>
+          <td>Charusat University</td>
         </tr>
         <tr>
-            <th>10:10 <br>to <br>11:10</th>
-            <td>DBMS <br>710 <br>CMG </td>
-            <td>SNT <br>710 <br>NCP </td>
-            <td>SNT <br>710 <br>VPN </td>
-            <td>SNT <br>710 <br>VPN </td>
-            <td>SNT <br>710 <br>NCP </td>
+          <th>Degree</th>
+          <td>B.Tec Information Technology</td>
+        </tr>
+        <tr>
+          <th>CGPI</th>
+          <td>9.7</td>
+        </tr>
+        <tr>
+            <th>H.S.C Percentile</th>
+            <td>98.55%</td>
+        </tr>
+        <tr>
+            <th>S.S.C Percentile</th>
+            <td>99.95%</td>
         </tr>
 
     </table>
-    <a href="./lab2/table.html">LAB 2 TIME TABLE</a>
+    <h3><B>SKILL SET <hr></B></h3>
+	    <ul style="list-style-type:lower-greek;"><li>Capable to work under pressure in a fast-paced, time-sensitive environment.</li>
+        <li> Positive attitude with an innovative approach.</li>
+        <li>Good understanding of people and their behavior</li>
+        <li>Highly motivated and self-learning</li></ul>
+  
+    <h3><B>HOBBIES <hr></B></h3>
+        <ul><li>Reading Newspapers</li>
+            <li>Writing song and stories</li>
+                <li>Making Friendship</li></ul>
+
+    <h3><B>PERSONAL DETAILS <hr></B></h3>
+    <ul><li>Date of Birth        : 11/02/2003</li>
+        <li>Sex                  : Male</li>
+        <li>NatioDnality         : Indian</li>
+        <li>Marital Status       : Unmarried</li>
+        <li>Category             : General</li>
+        <li>Languages known      : English, Hindi & Odia.</li>
+        <li>Father’s Name        : Ramesh Bhai R. Patoliya</li>
+        <li>Address              : Yogi Chowk,Surat,Gujrat-395010</li>
+    </ul>
+
+    <a href="./lab2/table.html">LAB 2 Task : TIME TABLE</a>
 </body>
-<td>DSA <br>710 <br>PMP </td>
 </html>
