--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body bgcolor="lightyellow" >
     <h1>CURRICULUM VITAE</h1><hr style="border: 2px solid rgb(22, 3, 3);">
     <h2> VIRAJ PATOLIYA</h2>
-    <img border="2" height="165px" width="150px" src="viraj.jpg" alt="please refresh onces" >
+<!--     <img border="2" height="165px" width="150px" src="viraj.jpg" alt="please refresh onces" > -->
+    <a href="./lab2/viraj.jpeg">
+        <img alt="Qries" src="./lab2/viraj.jpeg width=150" height="70">
+     </a>
     <p> <li>contact: 9714597273</li><li>virajpatoliya44@gmail.com</li></p>
     <h3><B>OBJECTIVE <hr></B></h3>
     <p>To become a successful expert in the field of Information Technology by channelizing my technical knowledge and skills to ensure personal and professional growth and to contribute to the prosperity of the organization.</p>
