--- a/lab2/table.html
+++ b/lab2/table.html
@@ -124,5 +124,6 @@
                <td colspan ="4">&nbsp;</td>
                 </tr>
     </table>
+    <a href="./lab2/form.html">LAB 2 Task 2 : HTML Form  </a>
 </body>
 </html>
