--- a/lab2/form.html
+++ b/lab2/form.html
@@ -59,6 +59,7 @@ Password:
 Re-type password:  
 <input type="Password" id="repass" name="repass"> <br> <br>  
 <input type="button" value="Submit"/>  
-</form>  
+</form> 
+  <a href="./lab3/layout1.html"> LAYOUTs </a>
 </body>  
 </html>  
