--- a/lab2/form.html
+++ b/lab2/form.html
@@ -60,6 +60,6 @@ Re-type password:
 <input type="Password" id="repass" name="repass"> <br> <br>  
 <input type="button" value="Submit"/>  
 </form>
-  <a href="../lab3/layout1.html"> LAYOUTs </a>
+  <a href="././lab3/layout1.html"> LAYOUTs </a>
 </body>
 </html>  
